@@ -1004,65 +1004,6 @@ parameter_list|,
 name|String
 name|localHostContext
 parameter_list|,
-specifier|final
-name|CurrentCoreDescriptorProvider
-name|registerOnReconnect
-parameter_list|)
-throws|throws
-name|InterruptedException
-throws|,
-name|TimeoutException
-throws|,
-name|IOException
-block|{
-name|this
-argument_list|(
-name|cc
-argument_list|,
-name|zkServerAddress
-argument_list|,
-name|zkClientTimeout
-argument_list|,
-name|zkClientConnectTimeout
-argument_list|,
-name|localHost
-argument_list|,
-name|locaHostPort
-argument_list|,
-name|localHostContext
-argument_list|,
-literal|null
-argument_list|,
-name|registerOnReconnect
-argument_list|)
-expr_stmt|;
-block|}
-DECL|method|ZkController
-specifier|public
-name|ZkController
-parameter_list|(
-specifier|final
-name|CoreContainer
-name|cc
-parameter_list|,
-name|String
-name|zkServerAddress
-parameter_list|,
-name|int
-name|zkClientTimeout
-parameter_list|,
-name|int
-name|zkClientConnectTimeout
-parameter_list|,
-name|String
-name|localHost
-parameter_list|,
-name|String
-name|locaHostPort
-parameter_list|,
-name|String
-name|localHostContext
-parameter_list|,
 name|String
 name|leaderVoteWait
 parameter_list|,
@@ -3143,12 +3084,23 @@ name|e
 argument_list|)
 throw|;
 block|}
+comment|// in this case, we want to wait for the leader as long as the leader might
+comment|// wait for a vote, at least
 name|String
 name|leaderUrl
 init|=
 name|getLeader
 argument_list|(
 name|cloudDesc
+argument_list|,
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|leaderVoteWait
+argument_list|)
+operator|+
+literal|1000
 argument_list|)
 decl_stmt|;
 name|String
@@ -3366,6 +3318,8 @@ return|return
 name|shardId
 return|;
 block|}
+comment|// timeoutms is the timeout for the first call to get the leader - there is then
+comment|// a longer wait to make sure that leader matches our local state
 DECL|method|getLeader
 specifier|private
 name|String
@@ -3374,6 +3328,9 @@ parameter_list|(
 specifier|final
 name|CloudDescriptor
 name|cloudDesc
+parameter_list|,
+name|int
+name|timeoutms
 parameter_list|)
 block|{
 name|String
@@ -3410,6 +3367,8 @@ name|cloudDesc
 operator|.
 name|getShardId
 argument_list|()
+argument_list|,
+name|timeoutms
 argument_list|)
 operator|.
 name|getCoreUrl
@@ -3511,6 +3470,8 @@ name|cloudDesc
 operator|.
 name|getShardId
 argument_list|()
+argument_list|,
+name|timeoutms
 argument_list|)
 operator|.
 name|getCoreUrl
@@ -3566,6 +3527,9 @@ parameter_list|,
 specifier|final
 name|String
 name|slice
+parameter_list|,
+name|int
+name|timeoutms
 parameter_list|)
 throws|throws
 name|InterruptedException
@@ -3576,6 +3540,8 @@ argument_list|(
 name|collection
 argument_list|,
 name|slice
+argument_list|,
+name|timeoutms
 argument_list|,
 literal|false
 argument_list|)
@@ -3595,6 +3561,9 @@ specifier|final
 name|String
 name|slice
 parameter_list|,
+name|int
+name|timeoutms
+parameter_list|,
 name|boolean
 name|failImmediatelyOnExpiration
 parameter_list|)
@@ -3604,7 +3573,9 @@ block|{
 name|int
 name|iterCount
 init|=
-literal|60
+name|timeoutms
+operator|/
+literal|1000
 decl_stmt|;
 name|Exception
 name|exp
@@ -3702,7 +3673,7 @@ name|Thread
 operator|.
 name|sleep
 argument_list|(
-literal|500
+literal|1000
 argument_list|)
 expr_stmt|;
 block|}
@@ -3720,7 +3691,7 @@ name|Thread
 operator|.
 name|sleep
 argument_list|(
-literal|500
+literal|1000
 argument_list|)
 expr_stmt|;
 block|}
@@ -4124,6 +4095,20 @@ name|KeeperException
 throws|,
 name|InterruptedException
 block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"publishing core={} state={}"
+argument_list|,
+name|cd
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|state
+argument_list|)
+expr_stmt|;
 comment|//System.out.println(Thread.currentThread().getStackTrace()[3]);
 name|Integer
 name|numShards
@@ -5946,6 +5931,8 @@ argument_list|(
 name|collection
 argument_list|,
 name|shard
+argument_list|,
+literal|30000
 argument_list|)
 expr_stmt|;
 break|break;
