@@ -471,6 +471,8 @@ literal|"8983"
 argument_list|,
 literal|"solr"
 argument_list|,
+literal|"0"
+argument_list|,
 operator|new
 name|CurrentCoreDescriptorProvider
 argument_list|()
@@ -635,6 +637,8 @@ argument_list|,
 literal|"8983"
 argument_list|,
 literal|"solr"
+argument_list|,
+literal|"0"
 argument_list|,
 operator|new
 name|CurrentCoreDescriptorProvider
