@@ -263,15 +263,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"azt beforeclass"
-argument_list|)
-expr_stmt|;
 name|createTempDir
 argument_list|()
 expr_stmt|;
